Registration and authentication done!